Fixed spacing on Release Tile on Artist Detail page

--- a/src/containers/ArtistDetail/index.css
+++ b/src/containers/ArtistDetail/index.css
@@ -55,6 +55,7 @@
     border-bottom: solid #ffcebe;
     height: 100%;
     box-sizing: border-box;
+    margin: 0;
 }
 
 .artistReleases .releasePreview {
